# crowdwave

./: ACCURACY_BY_QUESTION_TYPE.md  ACCURACY_HONEST_ASSESSMENT.md  ACCURACY_TESTS.md  ACCURACY_WHITEPAPER.md  AGENTS.md  AMAZON_SNS_VALIDATION.md  BEST_IN_MARKET_EVIDENCE.md  BIAS_COUNTERMEASURES.md  BUILD_STATUS.md  CALIBRATION_EXPANSION.md  CALIBRATION_MEMORY.md  COMPETITIVE_ADVANTAGE.md  COMPETITIVE_BENCHMARKS.md  CONFERENCE_BOARD_VALIDATION.md  CROWDWAVE_ACCURACY_FRAMEWORK.md  CROWDWAVE_ANALYTICS_DECK.html  CROWDWAVE_ANALYTICS_DECK_V2.html  CROWDWAVE_CALIBRATION_DECK.md  CROWDWAVE_CALIBRATION_DECK.pptx  CROWDWAVE_CEO_DECK.html  CROWDWAVE_CLIENT_PROPOSAL_TEMPLATE.md  CROWDWAVE_DECK_MARP.md  CROWDWAVE_DECK_V10.html  CROWDWAVE_DECK_V3_CONSULTING.md  CROWDWAVE_DECK_V3_MARP.md  CROWDWAVE_DECK_V4.pptx  CROWDWAVE_DECK_V5.html  CROWDWAVE_DECK_V6.html  CROWDWAVE_DECK_V7.html  CROWDWAVE_DECK_V8.html  CROWDWAVE_DECK_V9.html  CROWDWAVE_ENGINE_DECK.html  CROWDWAVE_EXECUTIVE_DECK_V2.pptx  CROWDWAVE_EXECUTIVE_ONEPAGER.html  CROWDWAVE_EXECUTIVE_ONEPAGER.md  CROWDWAVE_FRAMEWORKS.md  CROWDWAVE_MCKINSEY_STYLE.md  CROWDWAVE_MINI_ONEPAGER.html  CROWDWAVE_MINI_ONEPAGER.md  CROWDWAVE_ONEPAGER.html  (+50 more)
calibration-framework/: CALIBRATION_MINIMAL.md  CALIBRATION_PROMPT_INSERT.md  SURVEY_CALIBRATION_LIBRARY.md
crowdwave-app/: README.md
crowdwave_engine/: Dockerfile  README.md  __init__.py  __main__.py  accuracy_report.py  api.py  batch.py  benchmarks_executive.py  bias_corrections.py  calibration.py  calibration_current.py  cli.py  client.py  crowdwave.py  distributions.py  docker-compose.yml  evaluation.py  llm_integration.py  prompts.py  pyproject.toml  requirements.txt
crowdwave_engine/examples/: comprehensive_demo.py  demo.py  demo_survey.json  full_demo.py  validate_calibrations.py
crowdwave_engine/static/: index.html
crowdwave_engine/tests/: __init__.py  test_batch.py  test_benchmarks.py  test_distributions.py  test_engine.py  test_evaluation.py  test_real_data.py
memory/: 2026-02-07.md  NOTE_FOR_BRANDON.md
validation_surveys/: VALIDATION_INDEX.md  b2b_software_purchase_20260209_2212.csv  b2b_software_purchase_20260209_2212_summary.txt  college_students_20260209_2222.csv  college_students_20260209_2222_summary.txt  first_time_homebuyers_20260209_2216.csv  first_time_homebuyers_20260209_2216_summary.txt  genz_social_media_20260209_2212.csv  genz_social_media_20260209_2212_summary.txt  healthcare_patient_20260209_2212.csv  healthcare_patient_20260209_2212_summary.txt  healthcare_workers_20260209_2222.csv  healthcare_workers_20260209_2222_summary.txt  hispanic_consumer_20260209_2216.csv  hispanic_consumer_20260209_2216_summary.txt  luxury_consumers_20260209_2216.csv  luxury_consumers_20260209_2216_summary.txt  parents_young_children_20260209_2216.csv  parents_young_children_20260209_2216_summary.txt  remote_workers_20260209_2216.csv  remote_workers_20260209_2216_summary.txt  retirees_20260209_2222.csv  retirees_20260209_2222_summary.txt  rural_america_20260209_2222.csv  (+7 more)
(+49 files in other folders)
