[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Crowdwave-engine"
version = "1.0.0"
description = "Production survey simulation engine with 79% error reduction vs naive LLM"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Crowdwave", email = "team@Crowdwave.ai"}
]
keywords = ["survey", "simulation", "research", "calibration", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.100.0", "uvicorn>=0.22.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]
all = ["fastapi>=0.100.0", "uvicorn>=0.22.0", "pytest>=7.0.0"]

[project.scripts]
Crowdwave = "Crowdwave_engine.cli:main"

[project.urls]
Homepage = "https://Crowdwave.ai"
Documentation = "https://docs.Crowdwave.ai"
Repository = "https://github.com/Crowdwave/Crowdwave-engine"

[tool.setuptools.packages.find]
where = ["."]
include = ["Crowdwave_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
